; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_icc_check_length.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_icc_check_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@PNG_SIZE_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"exceeds system limits\00", align 1
@PNG_USER_CHUNK_MALLOC_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @png_icc_check_length(%struct.TYPE_5__* %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i64, i64* %9, align 8
  %14 = call i32 @icc_check_length(%struct.TYPE_5__* %10, i32 %11, i32 %12, i64 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %29

17:                                               ; preds = %4
  %18 = load i64, i64* @PNG_SIZE_MAX, align 8
  %19 = load i64, i64* %9, align 8
  %20 = icmp slt i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %17
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i64, i64* %9, align 8
  %26 = call i32 @png_icc_profile_error(%struct.TYPE_5__* %22, i32 %23, i32 %24, i64 %25, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 %26, i32* %5, align 4
  br label %29

27:                                               ; preds = %17
  br label %28

28:                                               ; preds = %27
  store i32 1, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %21, %16
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @icc_check_length(%struct.TYPE_5__*, i32, i32, i64) #1

declare dso_local i32 @png_icc_profile_error(%struct.TYPE_5__*, i32, i32, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
